feat(ExercicioEF-1): adicionar exercício (não finalizado)

--- a/Modulo-06-.NET/Aula05/EditoraCrescer/EditoraCrescer.API/EditoraCrescer.API.csproj
+++ b/Modulo-06-.NET/Aula05/EditoraCrescer/EditoraCrescer.API/EditoraCrescer.API.csproj
@@ -91,6 +91,8 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="App_Start\WebApiConfig.cs" />
+    <Compile Include="Controllers\AutoresController.cs" />
+    <Compile Include="Controllers\RevisoresController.cs" />
     <Compile Include="Controllers\LivrosController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
