--- a/Modulo-06-.NET/Aula05/EditoraCrescer/EditoraCrescerInfraestrutura/EditoraCrescerInfraestrutura.csproj
+++ b/Modulo-06-.NET/Aula05/EditoraCrescer/EditoraCrescerInfraestrutura/EditoraCrescerInfraestrutura.csproj
@@ -50,16 +50,20 @@
     <Compile Include="Contexto.cs" />
     <Compile Include="EditoraCrescer.cs" />
     <Compile Include="Entidades\Autor.cs" />
+    <Compile Include="Entidades\Revisor.cs" />
     <Compile Include="Entidades\Livro.cs" />
     <Compile Include="Mappings\AutorMap.cs" />
     <Compile Include="Mappings\LivroMap.cs" />
+    <Compile Include="Mappings\RevisorMap.cs" />
     <Compile Include="Migrations\201705301950407_CriacaoDoBanco.cs" />
     <Compile Include="Migrations\201705301950407_CriacaoDoBanco.Designer.cs">
       <DependentUpon>201705301950407_CriacaoDoBanco.cs</DependentUpon>
     </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Repositorios\AutorRepositorio.cs" />
     <Compile Include="Repositorios\LivroRepositorio.cs" />
+    <Compile Include="Repositorios\RevisorRepositorio.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
