fix(aula08): adicionar framework

--- a/Modulo-06-.NET/LocaGames.Api/LocaGames.Dominio/LocaGames.Dominio.csproj
+++ b/Modulo-06-.NET/LocaGames.Api/LocaGames.Dominio/LocaGames.Dominio.csproj
@@ -41,7 +41,12 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Cliente.cs" />
+    <Compile Include="Locacao.cs" />
+    <Compile Include="Opcional.cs" />
+    <Compile Include="Pacote.cs" />
+    <Compile Include="Produto.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Funcionario.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
