--- a/Modulo-06-.NET/LocaGames.Api/LocaGames/Web.config
+++ b/Modulo-06-.NET/LocaGames.Api/LocaGames/Web.config
@@ -5,9 +5,9 @@
   -->
 <configuration>
   <configSections>
-    <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
+    
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
-  </configSections>
+  <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 --></configSections>
   <connectionStrings>
     <add name="LocaGames" connectionString="Server=191.232.191.228;User Id=claudia.moura;Password=123456;Database=aluno18db" providerName="System.Data.SqlClient" />
   </connectionStrings>
